--- a/client/src/styles/components/auth/_SignUp.scss
+++ b/client/src/styles/components/auth/_SignUp.scss
@@ -41,6 +41,8 @@
   }
 
   &__input-wrapper {
+    z-index: 1;
+
     @extend %input-wrapper;
   }
 
